examples/test/testpolicy12987.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12987
  namespace: namespace241
spec:
  podSelector:
    matchLabels:
      key0: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value46
          key43: value18
          key37: value33
      podSelector:
        matchLabels:
          key29: value8
          key4: value5
          key21: value36
